# MP3fy

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  lib.cpp
app/src/main/java/tech/smallwonder/mp3fy/: MP3fy.java
app/src/main/java/tech/smallwonder/mp3fy/interfaces/: OnFailureListener.java
gradle/wrapper/: gradle-wrapper.properties
mp3fy/: build.gradle  gradle.properties  proguard-rules.pro
mp3fy/src/main/: AndroidManifest.xml
mp3fy/src/main/cpp/: CMakeLists.txt  Utils.h
mp3fy/src/main/java/tech/smallwonder/mp3fy/: AudioFileInfo.java  MP3fy.java
mp3fy/src/main/java/tech/smallwonder/mp3fy/interfaces/: OnMetadataAvailableListener.java  OnSuccessListener.java
testmp3fy/: build.gradle
testmp3fy/src/androidTest/java/tech/smallwonder/testmp3fy/: ExampleInstrumentedTest.java
testmp3fy/src/main/: AndroidManifest.xml
testmp3fy/src/main/java/tech/smallwonder/testmp3fy/: MainActivity.java
testmp3fy/src/main/res/layout/: activity_main.xml
testmp3fy/src/main/res/values/: strings.xml
testmp3fy/src/test/java/tech/smallwonder/testmp3fy/: ExampleUnitTest.java
